--- a/_data/social.yml
+++ b/_data/social.yml
@@ -22,12 +22,12 @@ twitter:
 vimeo:
 wordpress:
 youtube: # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
-twitch: sirrandoo
+twitch: LiizziiVR
 tiktok:
 
 # Share button options
 share:
-  facebook: true
+  facebook: false
   twitter: true
   tumblr:
   pinterest:
@@ -35,4 +35,4 @@ share:
   reddit: true
   linkedin:
   wordpress:
-  email: true
+  email: false
